--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@ aling: right;
   <!-- About Section -->
 <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="./paiano.jpg" class="w3-round w3-image w3-opacity-min" alt="" width="500" height="500">
+     <img src="./Paiano.jpg" class="w3-round w3-image w3-opacity-min" alt="" width="500" height="500">
     </div>
 
    <div class="w3-col m6 w3-padding-large">
